<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.RecyclerView
    android:id="@+id/card_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:listitem="@layout/category_list_item"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" />

