<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/menu_home"
        android:visible="false" />

    <item
        android:id="@+id/navigation_battle"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/menu_battle"
        android:visible="false" />

    <item
        android:id="@+id/navigation_codex"
        android:icon="@drawable/ic_codex"
        android:title="@string/codex" />

</menu>
