...
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/skill_name"
                android:textAlignment="center"
                android:gravity="center_horizontal"
...
